<resources>
    <string name="app_name">Jumble</string>
    <string name="send_to">7049099021</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="location">Location</string>

    <string name="channel_name">HomeActivity</string>
    <string name="channel_description">HomeActivity</string>

    <integer name="radius">15</integer>
    <integer name="margin">15</integer>
    <string name="title_activity_job_details">JobDetailsActivity</string>
    <string name="title_activity_sdfg">sdfg</string>

    <string name="google_maps_API_key">AIzaSyBKecYXGlY2giger7tDLp6Bg9lO0DJCUiE</string>
    <string name="cloud_message_server_key">AAAAto1Azj4:APA91bEEDuiH6lHJyX4fsOn9RZfIW5f5UvizIl0NZeJ
        V-m2y7fBdgUJiOPQC-FPsBwryzYvuo6RmpOx65X3q_KPUwPRR_N_E5HEa27enEms38Q08_AqtmBVYS366UGn5fg4iVr
        mQD0Zc9CxxwI5b-Z3zRut0mFn3lQ</string>

    <!-- Firebase Database Nodes -->
    <string name="dbnode_users">users</string>
    <string name="dbnode_messages">messages</string>

    <!-- Firebase Database Fields -->
    <string name="field_message">message</string>
    <string name="field_user_id">user_id</string>
    <string name="field_messaging_token">messaging_token</string>

</resources>
